# Hydra_Scheduler

./: .gitignore  CMakeLists.txt  FUTURE_PLANS.md  README.md
DEBIAN_PACKAGES/: hydra-scheduler-dbgsym_1.0.0-1_amd64.ddeb  hydra-scheduler_1.0.0-1.dsc  hydra-scheduler_1.0.0-1_amd64.buildinfo  hydra-scheduler_1.0.0-1_amd64.changes
debian/: control  debhelper-build-stamp  files  hydra-scheduler.install  hydra-scheduler.substvars
debian/.debhelper/hydra-scheduler/: dbgsym-build-ids
debian/.debhelper/hydra-scheduler/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/hydra-scheduler/dbgsym-root/usr/share/doc/: hydra-scheduler-dbgsym
debian/hydra-scheduler/DEBIAN/: control  md5sums
debian/hydra-scheduler/usr/share/applications/: Hydra_Scheduler.desktop
header_files/: GUI_GanttView.hpp  GUI_MainWindow.hpp  GanttChart.hpp  GlobalThemes.hpp  Process.hpp  Scheduler.hpp
src/: GUI_GanttView.cpp  GUI_MainWindow.cpp  GanttChart.cpp  GlobalThemes.cpp  Process.cpp  Scheduler.cpp  main.cpp
src/sch_algos/: Algorithms.hpp  FCFS.cpp  Priority.cpp  RoundRobin.cpp  SJF.cpp
